:bug: Fix menu link overflow word break

--- a/packages/theme-nonepress/src/theme/Menu/styles.css
+++ b/packages/theme-nonepress/src/theme/Menu/styles.css
@@ -7,7 +7,7 @@
   }
 
   &-link {
-    @apply flex items-center gap-2 whitespace-pre-wrap;
+    @apply flex items-center gap-2 whitespace-pre-wrap [word-break:break-word];
 
     &-active,
     &-active:hover,
